changed to the latest

--- a/frontend/src/modules/admin/admin.html
+++ b/frontend/src/modules/admin/admin.html
@@ -43,8 +43,8 @@
                                 Access <a ui-sref="admin.userManagement" class="text-primary" style="font-weight: 600;"><span class="glyphicon glyphicon-user"></span> User Management</a> to view, or remove user accounts across the platform.
                             </p>
                             <div class="text-center" style="margin-top: 25px;">
-                                <a ui-sref="admin.carApprovals" class="btn btn-primary" style="margin-right: 10px; padding: 10px 20px;">
-                                    <span class="glyphicon glyphicon-road"></span> Manage Cars
+                                <a ui-sref="admin.platformManagement" class="btn btn-primary" style="margin-right: 10px; padding: 10px 20px;">
+                                    <span class="glyphicon glyphicon-road"></span> Platform Management
                                 </a>
                                 <a ui-sref="admin.userManagement" class="btn btn-success" style="padding: 10px 20px;">
                                     <span class="glyphicon glyphicon-user"></span> Manage Users
