--- a/frontend/src/modules/auth/verifiedEmail.html
+++ b/frontend/src/modules/auth/verifiedEmail.html
@@ -1,8 +1,11 @@
-<div class="container-fluid" style="height: 100vh; padding: 0; margin: 0;">
-    <div class="row justify-content-center align-items-center" style="height: 100%; margin: 0;">
-        <div class="col-md-6 text-center">
-            <div class="card shadow-lg">
-                <div class="card-body p-5">
+<div class="container">
+    <div class="row" style="min-height: 100vh; display: flex; justify-content: center; align-items: center;">
+        <div class="col-md-6 col-sm-8 col-xs-10">
+            <div class="card panel panel-success shadow-lg">
+                <div class="panel-heading text-center">
+                    <h3 class="panel-title">Email Verification</h3>
+                </div>
+                <div class="panel-body p-5 text-center">
                     <i class="fas fa-check-circle text-success" style="font-size: 64px;"></i>
                     <h2 class="mt-4 mb-3">Email Verified Successfully!</h2>
                     <p class="text-muted mb-4">Your email has been verified and your account is now active. You can now log in to access all features.</p>
