--- a/frontend/src/modules/sellerListings/addCarModal.html
+++ b/frontend/src/modules/sellerListings/addCarModal.html
@@ -1,4 +1,4 @@
-<div class="modal-header">
+<div class="modal-header" ng-init="init()">
   <h3 class="text-primary text-center">Add a New Car</h3>
   <button type="button" class="close" ng-click="cancel()">&times;</button>
 </div>
@@ -76,6 +76,18 @@
         </select>
         <div class="text-danger" ng-show="addCarModalForm.location.$touched && addCarModalForm.location.$error.required">
           Location is required.
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-3 control-label">Registration Number:</label>
+      <div class="col-sm-9">
+        <input type="text" class="form-control" ng-model="registrationNumber" name="registrationNumber" placeholder="Enter vehicle registration number (e.g., AB12 XYZ)" required ng-pattern="/^[A-Z0-9 -]{5,12}$/">
+        <small class="help-block">Enter the official registration number as it appears on your vehicle documents</small>
+        <div class="text-danger" ng-show="addCarModalForm.registrationNumber.$touched && addCarModalForm.registrationNumber.$invalid">
+          <span ng-show="addCarModalForm.registrationNumber.$error.required">Registration number is required.</span>
+          <span ng-show="addCarModalForm.registrationNumber.$error.pattern">Please enter a valid registration number format.</span>
         </div>
       </div>
     </div>
