--- a/frontend/src/modules/admin/userManagement/userManagement.html
+++ b/frontend/src/modules/admin/userManagement/userManagement.html
@@ -3,23 +3,44 @@
 <div class="container-fluid" ng-init="init()">
     <div class="row">
         <div class="col-xs-12 col-md-10 col-md-offset-1">
-            <!-- City Filter Select -->
+
             <div class="form-group" style="margin-bottom: 20px;">
-                <label for="cityFilter"><i class="glyphicon glyphicon-map-marker"></i> Select City:</label>
                 <div class="row">
                     <div class="col-md-4">
+                        <label for="cityFilter"><i class="glyphicon glyphicon-map-marker"></i> Select City:</label>
                         <select id="cityFilter" class="form-control" ng-model="city" ng-change="filterUsers()">
                             <option value="">All Cities</option>
                             <option ng-repeat="cityOption in cities" value="{{cityOption}}">{{cityOption}}</option>
                         </select>
                     </div>
-                    <div class="col-md-2">
-                        <button class="btn btn-default" ng-click="resetFilter()">Reset Filter</button>
+                    <div class="col-md-4">
+                        <label>User Type:</label>
+                        <div class="btn-group btn-group-justified" role="group">
+                            <div class="btn-group" role="group">
+                                <button type="button" class="btn" 
+                                    ng-class="{'btn-primary': userType === 'seller', 'btn-default': userType !== 'seller'}" 
+                                    ng-click="setUserType('seller')">
+                                    <i class="glyphicon glyphicon-tag"></i> Sellers
+                                </button>
+                            </div>
+                            <div class="btn-group" role="group">
+                                <button type="button" class="btn" 
+                                    ng-class="{'btn-primary': userType === 'buyer', 'btn-default': userType !== 'buyer'}" 
+                                    ng-click="setUserType('buyer')">
+                                    <i class="glyphicon glyphicon-shopping-cart"></i> Buyers
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2" style="margin-top: 25px;">
+                        <button class="btn btn-default btn-block" ng-click="resetFilter()">
+                            <i class="glyphicon glyphicon-refresh"></i> Reset Filters
+                        </button>
                     </div>
                 </div>
             </div>
 
-            <!-- Search Input -->
+
             <div class="form-group">
                 <label>Search:</label>
                 <input type="text" ng-model="search" placeholder="Search for user by username/name" 
@@ -27,7 +48,7 @@
                     ng-change="filterUsersWithDelay()">
             </div>
 
-            <!-- Responsive Table -->
+
             <div class="table-responsive">
                 <table class="table table-bordered table-striped">
                     <thead>
@@ -61,13 +82,13 @@
                 </table>
             </div>
 
-            <!-- Loading Indicator -->
+
             <div class="text-center" ng-show="isLoading">
                 <i class="fa fa-spinner fa-spin fa-3x fa-fw text-primary"></i>
                 <span class="text-primary">Loading...</span>
             </div>
 
-            <!-- UI Bootstrap Pagination -->
+
             <div class="text-center" ng-if="pagination.totalItems > 0">
                 <ul uib-pagination
                     total-items="pagination.totalItems"
