--- a/frontend/src/modules/booking/ownerBookings/overlappingBidsModal.html
+++ b/frontend/src/modules/booking/ownerBookings/overlappingBidsModal.html
@@ -1,5 +1,4 @@
 <div class="modal-header">
-    <h3 class="modal-title">Overlapping Bids</h3>
 </div>
 <div class="modal-body">
     <div class="alert alert-warning">
@@ -11,19 +10,21 @@
             <thead>
                 <tr>
                     <th>User</th>
-                    <th>Amount</th>
+                    <th>Base Price</th>
+                    <th>Bid Amount</th>
                     <th>Start Date</th>
                     <th>End Date</th>
-                    <th>Total Payable amount</th>
+                    <th>Total Payable</th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="bid in overlappingBids">
                     <td>{{bid.from.firstName}} {{bid.from.lastName}}</td>
-                    <td>${{bid.amount}}</td>
+                    <td>{{bid.vehicle.price | currency:"₹"}}</td>
+                    <td>{{bid.amount | currency:"₹"}}</td>
                     <td>{{bid.startDate | date:'yyyy-MM-dd'}}</td>
                     <td>{{bid.endDate | date:'yyyy-MM-dd'}}</td>
-                    <td>${{bid.calculate()}}</td>
+                    <td>{{bid.calculate() | currency:"₹"}}</td>
                 </tr>
             </tbody>
         </table>
@@ -32,4 +33,4 @@
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="confirm()">Approve Bid</button>
     <button class="btn btn-default" ng-click="cancel()">Cancel</button>
-</div> 
+</div>
