--- a/frontend/src/modules/booking/userBookings/myBiddings.html
+++ b/frontend/src/modules/booking/userBookings/myBiddings.html
@@ -1,20 +1,15 @@
 <back-button></back-button>
 <div class="container-fluid" ng-init="init()" >
 
-
     <div class="row margin-top-15">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h2 ng-show="bookings.length > 0">
+                <h2 >
                     <i class="fa fa-list-alt"></i> Your Biddings
                 </h2>
             </div>
-            <div class="alert alert-info text-center" ng-show="bookings.length === 0">
-                <i class="fa fa-info-circle"></i> No biddings available
-            </div>
         </div>
     </div>
-
 
     <div class="row margin-bottom-15" >
         <div class="col-md-6 col-md-offset-3">
@@ -23,7 +18,7 @@
                     <form class="form-inline text-center">
                         <div class="form-group" style="width: 70%;">
                             <select class="form-control input-sm" style="width: 100%;" ng-model="biddingStatus" required>
-                                <option value="" disabled selected>Select Bidding Status</option>
+                                <option value="" disabled>Select Bidding Status</option>
                                 <option value="rejected">Rejected</option>
                                 <option value="pending">Pending</option>
                             </select>
@@ -42,7 +37,6 @@
         </div>
     </div>
 
-
     <div class="row" ng-show="isLoading">
         <div class="col-xs-12 text-center">
             <i class="fa fa-spinner fa-spin fa-3x"></i>
@@ -50,6 +44,13 @@
         </div>
     </div>
 
+    <div class="row" ng-show="!isLoading && bookings.length === 0">
+        <div class="col-xs-12">
+            <div class="alert alert-info text-center">
+                <i class="fa fa-info-circle"></i> No biddings available
+            </div>
+        </div>
+    </div>
     
     <div class="row" ng-show="bookings.length > 0">
         <div class="col-xs-12">
@@ -93,11 +94,11 @@
                                     <td>
                                         <p class="margin-bottom-5">
                                             <small class="text-muted">Per Day:</small><br>
-                                            <span class="text-primary">${{ booking.amount }}</span>
+                                            <span class="text-primary">{{ booking.amount | currency:"₹" }}</span>
                                         </p>
                                         <p class="margin-bottom-0">
                                             <small class="text-muted">Total:</small><br>
-                                            <strong class="text-success">${{ booking.calculate() }}</strong>
+                                            <strong class="text-success">{{ booking.calculate() | currency:"₹" }}</strong>
                                         </p>
                                     </td>
                                     
