--- a/frontend/src/modules/sellerListings/bookingsModal.html
+++ b/frontend/src/modules/sellerListings/bookingsModal.html
@@ -1,4 +1,3 @@
-
 <div class="modal-header">
   <h3 class="modal-title">Bookings for {{ selectedCar.name }}</h3>
   <button type="button" class="close" ng-click="dismiss()">&times;</button>
@@ -14,8 +13,8 @@
           <th>End Date</th>
           <th>Status</th>
           <th>Total Payable Price</th>
-
-          <th>amount per day</th>
+          <th>Amount per day</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody>
@@ -37,12 +36,10 @@
             </span>
           </td>
           <td>${{ booking.calculate() }}</td>
-        
-          <td ng-if="!booking.endOdometerValue">-</td>
           <td>${{ booking.amount }}</td>
         </tr>
         <tr ng-if="carBookings.length === 0">
-          <td colspan="7" class="text-center">No bookings found for this car</td>
+          <td colspan="8" class="text-center">No bookings found for this car</td>
         </tr>
       </tbody>
     </table>
